--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,15 @@
   gtag('config', 'G-870X719634');
 </script>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-870X719634"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-870X719634');
+</script>
 
 </head>
 
