fix name in footer

--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,7 @@
 
     <footer class="bg-light py-3">
       <div class="container text-center">
-        <p>&copy; 2023 Tutorial Website. All rights reserved.</p>
+        <p>&copy; 2023 MyWebClass. All rights reserved.</p>
       </div>
     </footer>
 
