--- a/src/privacy.html
+++ b/src/privacy.html
@@ -75,70 +75,32 @@
               January 1, 2022</span> <span class="text-muted" id="readingTime">0</span>
                 </div>
                 <section class="row">
-                    <h1>Privacy Policy</h1>
+                     <h1>Privacy Policy for MyWebClass</h1>
+    <p>At MyWebClass, we are committed to protecting the privacy of our users. This Privacy Policy explains how we collect, use, and protect your personal information. By using our website, you consent to the terms of this Privacy Policy.</p>
+    <h2>Information We Collect</h2>
+    <p>When you visit our website, we may collect the following types of personal information:</p>
+    <ul>
+      <li>Information you provide us directly, such as your name, email address, and phone number when you sign up for our services or contact us.</li>
+      <li>Information we collect automatically through cookies and other tracking technologies, such as your IP address, browser type, and device type.</li>
+      <li>Information we receive from third-party sources, such as Google Analytics, which we use to track website traffic and usage.</li>
+    </ul>
+    <h2>How We Use Your Information</h2>
+    <p>We may use the personal information we collect in the following ways:</p>
+    <ul>
+      <li>To provide you with our services and respond to your inquiries.</li>
+      <li>To personalize your experience on our website.</li>
+      <li>To improve our website and services.</li>
+      <li>To send you marketing communications about our services or other products and services that we believe may be of interest to you.</li>
+    </ul>
+    <h2>How We Protect Your Information</h2>
+    <p>We take reasonable measures to protect your personal information from unauthorized access, use, or disclosure. We use industry-standard security measures, such as firewalls and encryption, to protect your personal information.</p>
+    <h2>Google Analytics</h2>
+    <p>We use Google Analytics to track website traffic and usage. Google Analytics collects information about your use of our website, including your IP address, and may place cookies on your computer. This information is used to improve our website and services.</p>
+    <h2>Changes to Our Privacy Policy</h2>
+    <p>We reserve the right to make changes to this Privacy Policy at any time. We will notify you of any material changes by posting the updated Privacy Policy on our website. Your continued use of our website after any such changes constitutes your acceptance of the revised Privacy Policy.</p>
+    <h2>Contact Us</h2>
+    <p>If you have any questions about this Privacy Policy or our practices, please contact us.</p>
 
-                    <p>We at mywebclass.org are committed to protecting your privacy. This Privacy Policy explains what
-                        information we collect from you when you visit our website, how we use it, and how we protect
-                        it. By using our website, you agree to the terms of this Privacy Policy.</p>
-                    <h2>Information we collect</h2>
-                    <p>We may collect the following information from you when you visit our website:</p>
-                    <ul>
-                        <li>Personal information such as your name and email address, if you choose to provide it to
-                            us.
-                        </li>
-                        <li>Information about your use of the website, such as pages visited, time spent on the site,
-                            and links clicked.
-                        </li>
-                        <li>Information about your device, such as your IP address, browser type, and operating
-                            system.
-                        </li>
-                    </ul>
-                    <h2>How we use your information</h2>
-                    <p>We use the information we collect from you for the following purposes:</p>
-                    <ul>
-                        <li>To improve our website and the user experience.</li>
-                        <li>To analyze user behavior and measure the effectiveness of our content and marketing
-                            efforts.
-                        </li>
-                        <li>To communicate with you about our products and services, if you have provided us with your
-                            contact information.
-                        </li>
-                        <li>To comply with legal obligations.</li>
-                    </ul>
-                    <h2>Google Analytics</h2>
-                    <p>We use Google Analytics to collect information about your use of our website. Google Analytics
-                        collects information such as how often users visit the site, what pages they visit when they do
-                        so, and what other sites they used prior to coming to our website. We use the information we get
-                        from Google Analytics to improve our website and the user experience. Google Analytics collects
-                        only the IP address assigned to you on the date you visit our website, rather than your name or
-                        other identifying information. We do not combine the information collected through the use of
-                        Google Analytics with personally identifiable information. Google Analytics plants a permanent
-                        cookie on your web browser to identify you as a unique user the next time you visit our website.
-                        This cookie cannot be used by anyone other than Google. Google’s ability to use and share
-                        information collected by Google Analytics about your visits to our website is restricted by the
-                        Google Analytics Terms of Use and the Google Privacy Policy.</p>
-                    <h2>Data retention and security</h2>
-                    <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
-                        it was collected, unless a longer retention period is required by law. We take reasonable
-                        measures to protect the information we collect from loss, theft, misuse, and unauthorized
-                        access, disclosure, alteration, and destruction.</p>
-                    <h2>Data retention and security</h2>
-                    <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
-                        it was collected, unless a longer retention period is required by law. We take reasonable
-                        measures to protect the information we collect from loss, theft, misuse, and unauthorized
-                        access, disclosure, alteration, and destruction.</p>
-                    <h2>Your rights</h2>
-                    <p>You have the right to access, correct, and delete your personal information. You also have the
-                        right to object to the processing of your personal information and to withdraw your consent to
-                        the processing of your personal information. To exercise these rights, please contact us at
-                        [contact email address].</p>
-                    <h2>Changes to this Privacy Policy</h2>
-                    <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting
-                        the new Privacy Policy on this page. We recommend that you review this Privacy Policy
-                        periodically for any changes.</p>
-                    <h2>Contact us</h2>
-                    <p>If you have any questions about this Privacy Policy, please contact us at [contact email
-                        address].</p>
 
                 </section>
 
