updated metadata for privacy policy

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -4,15 +4,15 @@
 <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
-    <title>MyWebClass.org | Our Story</title>
+    <title>MyWebClass.org | Privacy Policy</title>
     <meta charset="UTF-8">
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
     <!--Basic meta info -->
-    <meta content="My Webclass Homepage | Our Story" name="keywords">
-    <meta content="Keith Williams" name="author"/>
-    <meta content="The story and mission of MyWebClass.org" name="description">
+    <meta content="My Webclass Homepage | Privacy Policy" name="keywords">
+    <meta content="Arly Volmar" name="author"/>
+    <meta content="Privacy Policy of MyWebClass.org" name="description">
 
     <!--OpenGraph meta -->
     <meta content="" property="og:title"/>
