--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,10 @@
     <meta property="og:image" content="assets/images/logo.png"/>
     <meta property="og:url" content=""/>
 
+    <link href="example" rel="styles/scss" type="text/css">
+
+
+
 </head>
 
 <body class="pt-5">
@@ -65,6 +69,59 @@
             </div>
         </div>
     </main>
+    <div id="cookieModal" class="modal">
+  <div class="modal-content">
+    <h3>Cookie Policy</h3>
+    <p>This website uses cookies to improve your experience. By clicking Agree, you consent to our use of cookies in accordance with our <a href="privacy.html">Privacy Policy</a>.</p>
+    <button id="consent-button">Agree</button>
+  </div>
+</div>
+    <style>
+    /* Modal */
+.modal {
+
+  position: fixed; /* Stay in place */
+  z-index: 9999; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+  max-width: 600px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+    </style>
+    <script>
+  let consent = localStorage.getItem('cookieConsent');
+  if (!consent) {
+    document.getElementById('cookieModal').style.display = 'flex';
+  }
+
+  document.getElementById('consent-button').addEventListener('click', function() {
+    localStorage.setItem('cookieConsent', 'true');
+    document.getElementById('cookieModal').style.display = 'none';
+  });
+</script>
+
+
+
     <footer class="py-5 container">
         <div class="row">
             <div class="col">
@@ -94,6 +151,7 @@
                             class="bi bi-facebook me-2"></i></a></li>
                 </ul>
             </div>
+
 
 
             <div class="col-md-5 offset-md-1 mb-3">
