--- a/src/index.html
+++ b/src/index.html
@@ -69,56 +69,66 @@
             </div>
         </div>
     </main>
-    <div id="cookieModal" class="modal">
-  <div class="modal-content">
-    <h3>Cookie Policy</h3>
-    <p>This website uses cookies to improve your experience. By clicking Agree, you consent to our use of cookies in accordance with our <a href="privacy.html">Privacy Policy</a>.</p>
-    <button id="consent-button">Agree</button>
+      <div class="cookie-consent">
+    <p>This website uses cookies to improve your experience. By clicking <b>Agree</b>, you consent to our use of cookies in accordance with our <a href="privacy.html">Privacy Policy</a>.</p><button id="consent-button"> I Agree</button>
   </div>
-</div>
-    <style>
-    /* Modal */
-.modal {
-
-  position: fixed; /* Stay in place */
-  z-index: 9999; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  <script>
+  const cookieStorage = {
+  getItem: (item) => {
+      const cookies = document.cookie
+          .split(';')
+          .map(cookie => cookie.split('='))
+          .reduce((acc, [key, value]) => ({ ...acc, [key.trim()]: value }), {});
+      return cookies[item];
+  },
+  setItem: (item, value) => {
+      document.cookie = `${item}=${value};`
+  }
 }
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 50%;
-  max-width: 600px;
-  text-align: center;
-  position: absolute;
+const storageType = cookieStorage;
+const consentPropertyName = 'jdc_consent';
+const shouldShowPopup = () => !storageType.getItem(consentPropertyName);
+const saveToStorage = () => storageType.setItem(consentPropertyName, true);
+
+window.onload = () => {
+
+  const acceptFn = event => {
+      saveToStorage(storageType);
+      consentPopup.classList.add('hidden');
+  }
+  const consentPopup = document.getElementById('consent-popup');
+  const acceptBtn = document.getElementById('accept');
+  acceptBtn.addEventListener('click', acceptFn);
+
+  if (shouldShowPopup(storageType)) {
+      setTimeout(() => {
+          consentPopup.classList.remove('hidden');
+      }, 2000);
+  }
+
+};
+
+
+  </script>
+    <style>
+        .cookie-consent {
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  background-color: #d2f3ca;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  z-index: 9999;
 }
 
 
-    </style>
-    <script>
-  let consent = localStorage.getItem('cookieConsent');
-  if (!consent) {
-    document.getElementById('cookieModal').style.display = 'flex';
-  }
 
-  document.getElementById('consent-button').addEventListener('click', function() {
-    localStorage.setItem('cookieConsent', 'true');
-    document.getElementById('cookieModal').style.display = 'none';
-  });
-</script>
+
+
+}
+    </style>
 
 
 
