--- a/src/index.html
+++ b/src/index.html
@@ -69,63 +69,77 @@
             </div>
         </div>
     </main>
-<div id="cookie-modal">
-		<p>This website uses cookies to improve your experience. By continuing to use this website, you consent to our use of cookies.</p>
-		<button id="cookie-accept">Accept</button>
-	</div>
+  <div class="cookie-consent">
+    <p>This website uses cookies to improve your experience. By clicking <b>Agree</b>, you consent to our use of cookies in accordance with our <a href="privacy_policy.html">Privacy Policy</a>.</p><button id="consent-button"> I Agree</button>
+  </div>
+  <script>
+  function getCookie(name) {
+  var value = "; " + document.cookie;
+  var parts = value.split("; " + name + "=");
+  if (parts.length == 2) {
+    return parts.pop().split(";").shift();
+  }
+  }
 
-	<script>
-		// Get the modal element
-		var modal = document.getElementById("cookie-modal");
+  function setCookie(name, value, days) {
+  var expires = "";
+  if (days) {
+    var date = new Date();
+    date.setTime(date.getTime() + days * 24 * 60 * 60 * 1000);
+    expires = "; expires=" + date.toUTCString();
+  }
+  document.cookie = name + "=" + value + expires + "; path=/";
+  }
 
-		// Get the accept button
-		var acceptButton = document.getElementById("cookie-accept");
+  document.addEventListener("DOMContentLoaded", function() {
+  var cookieConsent = document.querySelector(".cookie-consent");
+  var overlay = document.createElement("div");
+  overlay.classList.add("overlay");
 
-		// Check if the cookie exists
-		var cookieAccepted = document.cookie.indexOf("cookie_accepted=") >= 0;
+  // Check if cookie is present
+  if (getCookie("cookie_consent") === "true") {
+    // Cookie is present, hide cookie consent banner
+    cookieConsent.style.display = "none";
+    // Enable scrolling
+    document.body.style.overflow = "auto";
+  } else {
+    // Cookie is not present, show cookie consent banner
+    cookieConsent.style.display = "block";
+    // Disable scrolling
+    document.body.style.overflow = "hidden";
+    // Add overlay
+    document.body.appendChild(overlay);
+  }
 
-		// If the cookie doesn't exist, show the modal
-		if (!cookieAccepted) {
-			modal.style.display = "block";
-		}
+  // Add event listener to consent button
+  document
+    .getElementById("consent-button")
+    .addEventListener("click", function() {
+      // Set cookie
+      setCookie("cookie_consent", "true", 365);
+      // Remove cookie consent banner
+      cookieConsent.style.display = "none";
+      // Remove overlay
+      document.body.removeChild(overlay);
+      // Enable scrolling
+      document.body.style.overflow = "auto";
+    });
+  });
 
-		// When the accept button is clicked, set the cookie and hide the modal
-		acceptButton.onclick = function() {
-			// Set the cookie to expire in 30 days
-			var date = new Date();
-			date.setTime(date.getTime() + (30 * 24 * 60 * 60 * 1000));
-			var expires = "expires=" + date.toUTCString();
-			document.cookie = "cookie_accepted=true; " + expires;
-			modal.style.display = "none";
-		};
-	</script>
+
+  </script>
     <style>
-		#cookie-modal {
-			position: fixed;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			padding: 10px;
-			background-color: #fff;
-			border-top: 1px solid #ccc;
-			display: none;
-			z-index: 9999;
-		}
-		#cookie-modal p {
-			margin: 0;
-			font-size: 14px;
-		}
-		#cookie-modal button {
-			background-color: #007bff;
-			border: none;
-			color: #fff;
-			padding: 10px;
-			margin-top: 10px;
-			cursor: pointer;
-		}
-
-
-
+        .cookie-consent {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #d2f3ca;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+}
+    </style>
 
 
 
