--- a/src/privacy.html
+++ b/src/privacy.html
@@ -63,6 +63,26 @@
             <nav class="col-md-2 col-lg-2 d-md-block bg-light sidebar collapse position-fixed" id="sidebarMenu">
                 <div class="position-sticky pt-3">
                     <h2 class="justify-left">Navigation</h2>
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#title">Privacy Policy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#information-we-collect">Information We Collect</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#how-we-use-your-information">How We Use Your Information</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#how-we-protect-your-information">How We Protect Your Information</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#google-analytics">Google Analytics</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#changes-to-our-privacy-policy">Changes to Our Privacy Policy</a>
+                        </li>
+                    </ul>
                     <!-- Javascript builds out the navigation items -->
                 </div>
             </nav>
@@ -71,20 +91,20 @@
             <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
 
                 <h1 class="fw-bold border-bottom" id="title">Privacy Policy</h1>
-                <div class="text-muted mb-3 ">By <a href="#">Author Name</a><span class="text-muted me-3"> Last Updated:
-              January 1, 2022</span> <span class="text-muted" id="readingTime">0</span>
+                <div class="text-muted mb-3 ">By <a href="#">Arly Volmar</a><span class="text-muted me-3"> Last Updated:
+              March 18, 2023</span> <span class="text-muted" id="readingTime">0</span>
                 </div>
                 <section class="row">
-                     <h1>Privacy Policy for MyWebClass</h1>
+                     <h1 id="title">Privacy Policy for MyWebClass</h1>
                      <p>At MyWebClass, we are committed to protecting the privacy of our users. This Privacy Policy explains how we collect, use, and protect your personal information. By using our website, you consent to the terms of this Privacy Policy.</p>
-                     <h2>Information We Collect</h2>
+                     <h2 id="information-we-collect">Information We Collect</h2>
                      <p>When you visit our website, we may collect the following types of personal information:</p>
                      <ul>
                         <li>Information you provide us directly, such as your name, email address, and phone number when you sign up for our services or contact us.</li>
                         <li>Information we collect automatically through cookies and other tracking technologies, such as your IP address, browser type, and device type.</li>
                         <li>Information we receive from third-party sources, such as Google Analytics, which we use to track website traffic and usage.</li>
                      </ul>
-                     <h2>How We Use Your Information</h2>
+                     <h2 id="how-we-use-your-information">How We Use Your Information</h2>
                      <p>We may use the personal information we collect in the following ways:</p>
                      <ul>
                         <li>To provide you with our services and respond to your inquiries.</li>
@@ -92,11 +112,11 @@
                         <li>To improve our website and services.</li>
                         <li>To send you marketing communications about our services or other products and services that we believe may be of interest to you.</li>
                      </ul>
-                     <h2>How We Protect Your Information</h2>
+                     <h2 id="how-we-protect-your-information">How We Protect Your Information</h2>
                      <p>We take reasonable measures to protect your personal information from unauthorized access, use, or disclosure. We use industry-standard security measures, such as firewalls and encryption, to protect your personal information.</p>
-                     <h2>Google Analytics</h2>
+                     <h2 id="google-analytics">Google Analytics</h2>
                      <p>We use Google Analytics to track website traffic and usage. Google Analytics collects information about your use of our website, including your IP address, and may place cookies on your computer. This information is used to improve our website and services.</p>
-                     <h2>Changes to Our Privacy Policy</h2>
+                     <h2 id ="changes-to-our-privacy-policy">Changes to Our Privacy Policy</h2>
                      <p>We reserve the right to make changes to this Privacy Policy at any time. We will notify you of any material changes by posting the updated Privacy Policy on our website. Your continued use of our website after any such changes constitutes your acceptance of the revised Privacy Policy.</p>
                      <h2>Contact Us</h2>
                      <p>If you have any questions about this Privacy Policy or our practices, please contact us.</p
