Completing Internatinalization Reseach for Sprint1 with changes in index.html, main.js

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--@Rajiv 19th March - Updated the lang attribute from "EN" to "{lang}" in the html tag in your index.html file to support dynamic language changes: -->
 <html lang="EN">
 
 <head>
