--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,15 @@
     <meta property="og:description" content=""/>
     <meta property="og:image" content="assets/images/logo.png"/>
     <meta property="og:url" content=""/>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4041HG0W88"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4041HG0W88');
+  </script>
 
 </head>
 
