--- a/src/story.html
+++ b/src/story.html
@@ -19,6 +19,13 @@
     <meta content="" property="og:description"/>
     <meta content="assets/images/logo.png" property="og:image"/>
     <meta content="" property="og:url"/>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4041HG0W88');
+  </script>
 </head>
 
 <body>
