--- a/src/index.html
+++ b/src/index.html
@@ -69,18 +69,20 @@
         </div>
     </main>
   <div class="cookie-consent">
-    <p>This website uses cookies to improve your experience. By clicking <b>Agree</b>, you consent to our use of cookies in accordance with our <a href="privacy_policy.html">Privacy Policy</a>.</p><button id="consent-button"> I Agree</button>
-  </div>
-  <script>
-  function getCookie(name) {
+    <p>This website uses cookies to improve your experience. By clicking <b>Agree</b>, you consent to our use of cookies in accordance with our <a href="privacy.html">Privacy Policy</a>.</p>
+    <button id="accept-button">I Agree</button>
+    <button id="decline-button">I Decline</button>
+</div>
+<script>
+function getCookie(name) {
   var value = "; " + document.cookie;
   var parts = value.split("; " + name + "=");
   if (parts.length == 2) {
     return parts.pop().split(";").shift();
   }
-  }
+}
 
-  function setCookie(name, value, days) {
+function setCookie(name, value, days) {
   var expires = "";
   if (days) {
     var date = new Date();
@@ -88,9 +90,9 @@
     expires = "; expires=" + date.toUTCString();
   }
   document.cookie = name + "=" + value + expires + "; path=/";
-  }
+}
 
-  document.addEventListener("DOMContentLoaded", function() {
+document.addEventListener("DOMContentLoaded", function() {
   var cookieConsent = document.querySelector(".cookie-consent");
   var overlay = document.createElement("div");
   overlay.classList.add("overlay");
@@ -110,9 +112,9 @@
     document.body.appendChild(overlay);
   }
 
-  // Add event listener to consent button
+  // Add event listener to accept button
   document
-    .getElementById("consent-button")
+    .getElementById("accept-button")
     .addEventListener("click", function() {
       // Set cookie
       setCookie("cookie_consent", "true", 365);
@@ -123,10 +125,26 @@
       // Enable scrolling
       document.body.style.overflow = "auto";
     });
-  });
 
-
-  </script>
+  // Add event listener to decline button
+  document
+    .getElementById("decline-button")
+    .addEventListener("click", function() {
+      // Set cookie
+      setCookie("cookie_consent", "false", 365);
+      // Remove cookie consent banner
+      cookieConsent.style.display = "none";
+      // Remove overlay
+      document.body.removeChild(overlay);
+      // Enable scrolling
+      document.body.style.overflow = "auto";
+      // Delete existing cookies
+      document.cookie.split(";").forEach(function(c) {
+        document.cookie = c.replace(/^ +/, "").replace(/=.*/, "=;expires=" + new Date().toUTCString() + ";path=/");
+      });
+    });
+});
+</script>
     <style>
         .cookie-consent {
   position: fixed;
