--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content=""/>
     <meta property="og:image" content="assets/images/logo.png"/>
     <meta property="og:url" content=""/>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics --->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4041HG0W88"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
