--- a/src/privacy.html
+++ b/src/privacy.html
@@ -19,7 +19,7 @@
     <meta content="" property="og:description"/>
     <meta content="assets/images/logo.png" property="og:image"/>
     <meta content="" property="og:url"/>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics --->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4041HG0W88"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
