--- a/src/story.html
+++ b/src/story.html
@@ -19,6 +19,16 @@
     <meta content="" property="og:description"/>
     <meta content="assets/images/logo.png" property="og:image"/>
     <meta content="" property="og:url"/>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L4VFG6HE1H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L4VFG6HE1H');
+</script>
 </head>
 
 <body>
