--- a/src/content.html
+++ b/src/content.html
@@ -26,7 +26,7 @@
     <header class="fixed-top" role="banner">
         <nav aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark " role="navigation">
             <div class="container">
-                <a class="navbar-brand" href="/">MyWebClass.org</a>
+                <a class="navbar-brand" href="/mywebclass-simulation">MyWebClass.org</a>
                 <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
                         data-bs-target="#navbarCollapse" data-bs-toggle="collapse" type="button">
                     <span aria-hidden="true" class="navbar-toggler-icon"></span>
