--- a/src/content.html
+++ b/src/content.html
@@ -10,7 +10,7 @@
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Privacy Policy" name="keywords" />
-    <meta content="Keith Williams" name="author" />
+    <meta content="Arly Volmar | Nathan Hernandez | Dina Lahham" name="author" />
     <meta content="A project to provide educational resources to web development teachers" name="description" />
 
     <!--OpenGraph meta -->
@@ -25,7 +25,7 @@
       <header class="fixed-top" role="banner">
         <nav aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
           <div class="container">
-            <a class="navbar-brand" href="/">MyWebClass.org</a>
+            <a class="navbar-brand" href="/mywebclass-simulation">MyWebClass.org</a>
             <button
               aria-controls="navbarCollapse"
               aria-expanded="false"
