Updated privacy html file with correct title

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -4,7 +4,7 @@
 <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
-    <title>MyWebClass.org | Our Story</title>
+    <title>MyWebClass.org | Privacy Policy</title>
     <meta charset="UTF-8">
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
