Updated the title to reflect content page

--- a/src/content.html
+++ b/src/content.html
@@ -9,7 +9,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
     <!--Basic meta info -->
-    <meta content="My Webclass Homepage | Privacy Policy" name="keywords" />
+    <meta content="My Webclass Homepage | Content" name="keywords" />
     <meta content="Arly Volmar | Dina Lahham | Nathan Hernandez | ChatGPT" name="author" />
     <meta content="A project to provide educational resources to web development teachers" name="description" />
 
