Updated the title to reflect content page

--- a/src/content.html
+++ b/src/content.html
@@ -3,13 +3,13 @@
   <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
-    <title>MyWebClass.org | Privacy Policy</title>
+    <title>MyWebClass.org | Content</title>
     <meta charset="UTF-8" />
 
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
     <!--Basic meta info -->
-    <meta content="My Webclass Homepage | Privacy Policy" name="keywords" />
+    <meta content="My Webclass Homepage | Content" name="keywords" />
     <meta content="Arly Volmar | Nathan Hernandez | Dina Lahham" name="author" />
     <meta content="A project to provide educational resources to web development teachers" name="description" />
 
