--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <!--SEO- Google search console verification-->
+    <meta name="google-site-verification" content="jQfnSzxRC9a_BStfFUVRIpIj-0UhEss2Z4gc2VCW5bY" />
     <!--Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage" />
     <meta name="author" content="Keith Williams" />
