Adds or Modifies content throughout. Actual words are generated in conjunction with use of ChatGPT. Touched and refactored almost every rendered file.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
     <!--Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage" />
-    <meta name="author" content="Keith Williams" />
+    <meta name="author" content="Arly Volmar | Dina Lahham | Nathan Hernandez" />
     <meta name="description" content="A project to help educators integrate new technoliges into their teaching" />
 
     <!--OpenGraph meta -->
@@ -20,12 +20,21 @@
     <meta property="og:url" content="" />
   </head>
 
-  <body class="pt-5">
+  <body class="pt-3">
     <div class="container-fluid">
       <header role="banner" class="fixed-top">
         <nav role="navigation" aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container">
-            <a class="navbar-brand" href="/">MyWebClass.org</a>
+          <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+              <img
+                src="assets/images/logo.jpg"
+                alt="MyWebClass Logo"
+                width="48"
+                height="30"
+                class="d-inline-block align-text-top"
+              />
+              MyWebClass
+            </a>
             <button
               class="navbar-toggler"
               type="button"
@@ -41,32 +50,41 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="content.html">Content Template</a>
+                  <a class="nav-link" href="/story.html">Our Story</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/privacy.html">Privacy Policy</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="content.html">Content Template [Beta]</a>
                 </li>
               </ul>
             </div>
           </div>
         </nav>
       </header>
+
       <main>
         <div class="container my-5">
-          <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg">
-            <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
-              <h1 class="display-6 fw-bold lh-1">Revolutionize your teaching</h1>
+          <div class="row p-4 pb-4 pe-lg-4 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+            <div class="col-lg-6 p-3 p-lg-3 pt-lg-0">
+              <h1 class="display-6 fw-bold lh-1">Empowering Educators for a Digital World</h1>
               <p class="lead">
-                Empower your students with cutting-edge software engineering skills. Join MyWebClass and discover
-                advanced technologies that will transform your teaching and their learning journey.
+                MyWebClass is a website providing accessible resources to educators teaching modern technology, to their
+                students. Join today and discover the ways our website can transform your teaching, and help you
+                confidently prepare students for successful futures in the digital age.
               </p>
               <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Start Here</button>
+                <a class="btn btn-primary btn-lg px-4 me-md-2 fw-bold" href="/story.html">Start Here</a>
               </div>
             </div>
-            <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+            <div class="col-lg-5 offset-lg-1 p-0 overflow-hidden shadow-lg">
               <img
                 class="rounded-lg-3 img-fluid"
-                src="assets/images/teacher.gif"
-                alt="a teacher with students"
-                width="720"
+                src="assets/images/MyWebClass_Promo.jpg"
+                alt="MyWebClass Students learning programming from a Teacher"
+                width="886"
+                height="575"
               />
             </div>
           </div>
