--- a/src/privacy.html
+++ b/src/privacy.html
@@ -23,8 +23,17 @@
     <div class="container-fluid">
       <header class="fixed-top" role="banner">
         <nav aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
-          <div class="container">
-            <a class="navbar-brand" href="/">MyWebClass.org</a>
+          <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+              <img
+                src="assets/images/logo.jpg"
+                alt="MyWebClass Logo"
+                width="48"
+                height="30"
+                class="d-inline-block align-text-top"
+              />
+              MyWebClass
+            </a>
             <button
               aria-controls="navbarCollapse"
               aria-expanded="false"
@@ -40,7 +49,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="content.html">Content Template</a>
+                  <a class="nav-link" href="/story.html">Our Story</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/privacy.html">Privacy Policy</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="content.html">Content Template [Beta]</a>
                 </li>
               </ul>
             </div>
@@ -64,9 +79,11 @@
       <div class="container">
         <div class="row">
           <!-- Sidebar menu with scrollspy -->
-          <nav class="col-md-2 col-lg-2 d-md-block bg-light sidebar collapse position-fixed" id="sidebarMenu">
+          <nav class="col-md-2 col-lg-2 d-md-block bg-light sidebar collapse position-fixed" id="toc_menu">
             <div class="position-sticky pt-3">
               <h2 class="justify-left">Navigation</h2>
+              <!-- Javascript builds out the navigation items -->
+              <!--
               <ul class="nav flex-column">
                 <li class="nav-item">
                   <a class="nav-link active" href="#title">Privacy Policy</a>
@@ -86,74 +103,89 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#changes-to-our-privacy-policy">Changes to Our Privacy Policy</a>
                 </li>
-              </ul>
-              <!-- Javascript builds out the navigation items -->
+              </ul> -->
             </div>
           </nav>
 
           <!-- Main content area -->
           <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
-            <h1 class="fw-bold border-bottom" id="title">Privacy Policy</h1>
-            <div class="text-muted mb-3">
-              By: Dina Lahham | Arly Volmar | Nathan Hernandez
-              <span class="text-muted me-3"> Last Updated: March 21, 2023</span>
-              <span class="text-muted" id="readingTime">0</span>
-            </div>
-            <section class="row">
-              <h1 id="privacy-policy-section-header">Privacy Policy for MyWebClass</h1>
-              <p>
-                At MyWebClass, we are committed to protecting the privacy of our users. This Privacy Policy explains how
-                we collect, use, and protect your personal information. By using our website, you consent to the terms
-                of this Privacy Policy.
-              </p>
-              <h2 id="information-we-collect">Information We Collect</h2>
-              <p>When you visit our website, we may collect the following types of personal information:</p>
-              <ul>
-                <li>
-                  Information you provide us directly, such as your name, email address, and phone number when you sign
-                  up for our services or contact us.
-                </li>
-                <li>
-                  Information we collect automatically through cookies and other tracking technologies, such as your IP
-                  address, browser type, and device type.
-                </li>
-                <li>
-                  Information we receive from third-party sources, such as Google Analytics, which we use to track
-                  website traffic and usage.
-                </li>
-              </ul>
-              <h2 id="how-we-use-your-information">How We Use Your Information</h2>
-              <p>We may use the personal information we collect in the following ways:</p>
-              <ul>
-                <li>To provide you with our services and respond to your inquiries.</li>
-                <li>To personalize your experience on our website.</li>
-                <li>To improve our website and services.</li>
-                <li>
-                  To send you marketing communications about our services or other products and services that we believe
-                  may be of interest to you.
-                </li>
-              </ul>
-              <h2 id="how-we-protect-your-information">How We Protect Your Information</h2>
-              <p>
-                We take reasonable measures to protect your personal information from unauthorized access, use, or
-                disclosure. We use industry-standard security measures, such as firewalls and encryption, to protect
-                your personal information.
-              </p>
-              <h2 id="google-analytics">Google Analytics</h2>
-              <p>
-                We use Google Analytics to track website traffic and usage. Google Analytics collects information about
-                your use of our website, including your IP address, and may place cookies on your computer. This
-                information is used to improve our website and services.
-              </p>
-              <h2 id="changes-to-our-privacy-policy">Changes to Our Privacy Policy</h2>
-              <p>
-                We reserve the right to make changes to this Privacy Policy at any time. We will notify you of any
-                material changes by posting the updated Privacy Policy on our website. Your continued use of our website
-                after any such changes constitutes your acceptance of the revised Privacy Policy.
-              </p>
-              <h2>Contact Us</h2>
-              <p>If you have any questions about this Privacy Policy or our practices, please contact us.</p>
+            <section id="title">
+              <h1 class="fw-bold border-bottom">Privacy Policy</h1>
+              <div class="text-muted mb-3">
+                By: Dina Lahham | Arly Volmar | Nathan Hernandez | ChatGPT
+                <span class="text-muted me-3"> Last Updated: March 21, 2023</span>
+                <span class="text-muted" id="readingTime">0</span>
+              </div>
             </section>
+            <div>
+              <section id="section-privacy-intro">
+                <h1 class="h4 mb-1" id="privacy-policy-section-header">Terms Consent</h1>
+                <p>
+                  At MyWebClass, we are committed to protecting the privacy of our users. This Privacy Policy explains
+                  how we collect, use, and protect your personal information. By using our website, you consent to the
+                  terms of this Privacy Policy.
+                </p>
+              </section>
+              <section id="section-information-we-collect">
+                <h2 id="information-we-collect">Info Collected</h2>
+                <p>When you visit our website, we may collect the following types of personal information:</p>
+                <ul>
+                  <li>
+                    Information you provide us directly, such as your name, email address, and phone number when you
+                    sign up for our services or contact us.
+                  </li>
+                  <li>
+                    Information we collect automatically through cookies and other tracking technologies, such as your
+                    IP address, browser type, and device type.
+                  </li>
+                  <li>
+                    Information we receive from third-party sources, such as Google Analytics, which we use to track
+                    website traffic and usage.
+                  </li>
+                </ul>
+              </section>
+              <section id="section-how-we-use-your-information">
+                <h2 id="how-we-use-your-information">Information Use</h2>
+                <p>We may use the personal information we collect in the following ways:</p>
+                <ul>
+                  <li>To provide you with our services and respond to your inquiries.</li>
+                  <li>To personalize your experience on our website.</li>
+                  <li>To improve our website and services.</li>
+                  <li>
+                    To send you marketing communications about our services or other products and services that we
+                    believe may be of interest to you.
+                  </li>
+                </ul>
+              </section>
+              <section id="section-how-we-protect-your-information">
+                <h2 id="how-we-protect-your-information">Protections</h2>
+                <p>
+                  We take reasonable measures to protect your personal information from unauthorized access, use, or
+                  disclosure. We use industry-standard security measures, such as firewalls and encryption, to protect
+                  your personal information.
+                </p>
+              </section>
+              <section id="section-google-analytics">
+                <h2 id="google-analytics">Google Analytics</h2>
+                <p>
+                  We use Google Analytics to track website traffic and usage. Google Analytics collects information
+                  about your use of our website, including your IP address, and may place cookies on your computer. This
+                  information is used to improve our website and services.
+                </p>
+              </section>
+              <section id="section-changes-to-your-privacy-policy">
+                <h2 id="changes-to-our-privacy-policy">Changes Notice</h2>
+                <p>
+                  We reserve the right to make changes to this Privacy Policy at any time. We will notify you of any
+                  material changes by posting the updated Privacy Policy on our website. Your continued use of our
+                  website after any such changes constitutes your acceptance of the revised Privacy Policy.
+                </p>
+              </section>
+              <section id="section-contact-us">
+                <h2 id="contact-us">Contact Us</h2>
+                <p>If you have any questions about this Privacy Policy or our practices, please contact us.</p>
+              </section>
+            </div>
           </main>
         </div>
         <footer class="py-5 container">
