--- a/src/content.html
+++ b/src/content.html
@@ -10,7 +10,7 @@
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Privacy Policy" name="keywords" />
-    <meta content="Arly Volmar | Nathan Hernandez | Dina Lahham" name="author" />
+    <meta content="Arly Volmar | Dina Lahham | Nathan Hernandez | ChatGPT" name="author" />
     <meta content="A project to provide educational resources to web development teachers" name="description" />
 
     <!--OpenGraph meta -->
@@ -24,8 +24,17 @@
     <div class="container-fluid">
       <header class="fixed-top" role="banner">
         <nav aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
-          <div class="container">
-            <a class="navbar-brand" href="/mywebclass-simulation">MyWebClass.org</a>
+          <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+              <img
+                src="assets/images/logo.jpg"
+                alt="MyWebClass Logo"
+                width="48"
+                height="30"
+                class="d-inline-block align-text-top"
+              />
+              MyWebClass
+            </a>
             <button
               aria-controls="navbarCollapse"
               aria-expanded="false"
@@ -41,7 +50,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="content.html">Content Template</a>
+                  <a class="nav-link" href="/story.html">Our Story</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/privacy.html">Privacy Policy</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="content.html">Content Template [Beta]</a>
                 </li>
               </ul>
             </div>
@@ -77,7 +92,8 @@
             <section id="title">
               <h1 class="fw-bold border-bottom">Article Title</h1>
               <div class="text-muted mb-3">
-                By <a href="#">Author Name</a><span class="text-muted me-3"> Last Updated: January 1, 2022</span>
+                By: Dina Lahham | Arly Volmar | Nathan Hernandez
+                <span class="text-muted me-3"> Last Updated: March 21, 2023</span>
                 <span class="text-muted" id="readingTime">0</span>
               </div>
             </section>
